--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
 		"pretty": "prettier --write \"./**/*.{js,jsx,mjs,cjs,ts,tsx,json}\""
 	},
 	"dependencies": {
+		"@reduxjs/toolkit": "^1.9.7",
 		"dayjs": "^1.11.10",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-redux": "^8.1.3",
 		"react-router-dom": "^6.18.0"
 	},
 	"devDependencies": {
